; ModuleID = '/home/carl/AnghaBench/radare2/shlr/mpc/extr_mpc.c_mpcaf_grammar_id.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/mpc/extr_mpc.c_mpcaf_grammar_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*)* @mpcaf_grammar_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @mpcaf_grammar_id(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to i32*
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call %struct.TYPE_6__* @mpca_grammar_find_parser(i32* %10, i32* %11)
  store %struct.TYPE_6__* %12, %struct.TYPE_6__** %7, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @free(i32* %13)
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %27

19:                                               ; preds = %2
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = call %struct.TYPE_6__* @mpca_add_tag(%struct.TYPE_6__* %20, i64 %23)
  %25 = call i32 @mpca_root(%struct.TYPE_6__* %24)
  %26 = call i32* @mpca_state(i32 %25)
  store i32* %26, i32** %3, align 8
  br label %31

27:                                               ; preds = %2
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %29 = call i32 @mpca_root(%struct.TYPE_6__* %28)
  %30 = call i32* @mpca_state(i32 %29)
  store i32* %30, i32** %3, align 8
  br label %31

31:                                               ; preds = %27, %19
  %32 = load i32*, i32** %3, align 8
  ret i32* %32
}

declare dso_local %struct.TYPE_6__* @mpca_grammar_find_parser(i32*, i32*) #1

declare dso_local i32 @free(i32*) #1

declare dso_local i32* @mpca_state(i32) #1

declare dso_local i32 @mpca_root(%struct.TYPE_6__*) #1

declare dso_local %struct.TYPE_6__* @mpca_add_tag(%struct.TYPE_6__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
